@@ -5,6 +5,7 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.network.protocol.Packet;
 import net.minecraft.network.protocol.PacketFlow;
 import net.minecraft.network.protocol.game.*;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.server.network.ServerGamePacketListenerImpl;
 
@@ -13,8 +14,8 @@ import java.util.Set;
 
 public class FakePlayerConnection extends ServerGamePacketListenerImpl {
 
-    public FakePlayerConnection(ServerPlayer player) {
-        super(null, new Connection(PacketFlow.CLIENTBOUND), player);
+    public FakePlayerConnection(MinecraftServer server, ServerPlayer player) {
+        super(server, new Connection(PacketFlow.CLIENTBOUND), player);
     }
 
     @Override
