@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with the shield projector doing damage on 1.19.3
+
 1.19.1-5.2.1:
 - The shape card and space chamber gui works again in 1.19.3
 
